AST-1540 - Fixed contrast color issue with block ast-theme color name (#4084)
* fix: var() colors code appearing in block editor theme palette picker.

* chore: phpcbf run

* chore: Added PR suggessions of updating vars

* chore: Updated var type for btnCount


* chore: color contrast issue with color label fixed

* chore: grunt build

* chore: grunt build

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-rtl.css
@@ -2685,7 +2685,7 @@ p.demo_store a,
 }
 
 .woocommerce .variations th {
-  text-align: left;
+  text-align: right;
 }
 
 .woocommerce,
